--- a/css/bootstrap.css
+++ b/css/bootstrap.css
@@ -8725,205 +8725,205 @@ th {
   visibility: hidden; }
 
 .child-row:nth-child(0) td:nth-child(2) .table-innerbox:after {
-  background: #69f9a8; }
+  background: #d680f3; }
 .child-row:nth-child(1) td:nth-child(2) .table-innerbox:after {
-  background: #2a92f5; }
+  background: #6168a4; }
 .child-row:nth-child(2) td:nth-child(2) .table-innerbox:after {
-  background: #3b843c; }
+  background: #df61a4; }
 .child-row:nth-child(3) td:nth-child(2) .table-innerbox:after {
-  background: #f882bf; }
+  background: #723106; }
 .child-row:nth-child(4) td:nth-child(2) .table-innerbox:after {
-  background: #19eda9; }
+  background: #ef7eaa; }
 .child-row:nth-child(5) td:nth-child(2) .table-innerbox:after {
-  background: #80fba4; }
+  background: #c7938b; }
 .child-row:nth-child(6) td:nth-child(2) .table-innerbox:after {
-  background: #ab5bc2; }
+  background: #cf1eb9; }
 .child-row:nth-child(7) td:nth-child(2) .table-innerbox:after {
-  background: #edd985; }
+  background: #0ae69c; }
 .child-row:nth-child(8) td:nth-child(2) .table-innerbox:after {
-  background: #87e065; }
+  background: #c6dcfa; }
 .child-row:nth-child(9) td:nth-child(2) .table-innerbox:after {
-  background: #1bdcd5; }
+  background: #a02373; }
 .child-row:nth-child(10) td:nth-child(2) .table-innerbox:after {
-  background: #42347e; }
+  background: #b3e351; }
 .child-row:nth-child(11) td:nth-child(2) .table-innerbox:after {
-  background: #5b1a10; }
+  background: #2f1b64; }
 .child-row:nth-child(12) td:nth-child(2) .table-innerbox:after {
-  background: #f5bcd9; }
+  background: #8935ab; }
 .child-row:nth-child(13) td:nth-child(2) .table-innerbox:after {
-  background: #8134c3; }
+  background: #a2b468; }
 .child-row:nth-child(14) td:nth-child(2) .table-innerbox:after {
-  background: #2edce3; }
+  background: #32d867; }
 .child-row:nth-child(15) td:nth-child(2) .table-innerbox:after {
-  background: #8beba0; }
+  background: #129202; }
 .child-row:nth-child(16) td:nth-child(2) .table-innerbox:after {
-  background: #b6508f; }
+  background: #f49413; }
 .child-row:nth-child(17) td:nth-child(2) .table-innerbox:after {
-  background: #3d37ee; }
+  background: #42d0c1; }
 .child-row:nth-child(18) td:nth-child(2) .table-innerbox:after {
-  background: #156fa9; }
+  background: #258081; }
 .child-row:nth-child(19) td:nth-child(2) .table-innerbox:after {
-  background: #44bc95; }
+  background: #791157; }
 .child-row:nth-child(20) td:nth-child(2) .table-innerbox:after {
-  background: #604598; }
+  background: #707168; }
 .child-row:nth-child(21) td:nth-child(2) .table-innerbox:after {
-  background: #17dac5; }
+  background: #6f8b0e; }
 .child-row:nth-child(22) td:nth-child(2) .table-innerbox:after {
-  background: #07e926; }
+  background: #43ddc5; }
 .child-row:nth-child(23) td:nth-child(2) .table-innerbox:after {
-  background: #d02570; }
+  background: #e5c676; }
 .child-row:nth-child(24) td:nth-child(2) .table-innerbox:after {
-  background: #5a7f8b; }
+  background: #f12f65; }
 .child-row:nth-child(25) td:nth-child(2) .table-innerbox:after {
-  background: #7e7818; }
+  background: #48191c; }
 .child-row:nth-child(26) td:nth-child(2) .table-innerbox:after {
-  background: #d67e85; }
+  background: #5167f3; }
 .child-row:nth-child(27) td:nth-child(2) .table-innerbox:after {
-  background: #aee0e7; }
+  background: #368728; }
 .child-row:nth-child(28) td:nth-child(2) .table-innerbox:after {
-  background: #e98725; }
+  background: #9d0513; }
 .child-row:nth-child(29) td:nth-child(2) .table-innerbox:after {
-  background: #056b02; }
+  background: #124e33; }
 .child-row:nth-child(30) td:nth-child(2) .table-innerbox:after {
-  background: #2c5f84; }
+  background: #28235a; }
 .child-row:nth-child(31) td:nth-child(2) .table-innerbox:after {
-  background: #d130af; }
+  background: #d46583; }
 .child-row:nth-child(32) td:nth-child(2) .table-innerbox:after {
-  background: #711bb7; }
+  background: #828439; }
 .child-row:nth-child(33) td:nth-child(2) .table-innerbox:after {
-  background: #f5102b; }
+  background: #6fef31; }
 .child-row:nth-child(34) td:nth-child(2) .table-innerbox:after {
-  background: #e28bb4; }
+  background: #0c20bc; }
 .child-row:nth-child(35) td:nth-child(2) .table-innerbox:after {
-  background: #e8a867; }
+  background: #1f4dc8; }
 .child-row:nth-child(36) td:nth-child(2) .table-innerbox:after {
-  background: #8a7661; }
+  background: #0bb8f0; }
 .child-row:nth-child(37) td:nth-child(2) .table-innerbox:after {
-  background: #49dcd9; }
+  background: #e89fcb; }
 .child-row:nth-child(38) td:nth-child(2) .table-innerbox:after {
-  background: #c259dd; }
+  background: #bed209; }
 .child-row:nth-child(39) td:nth-child(2) .table-innerbox:after {
-  background: #278d39; }
+  background: #9bbfa0; }
 .child-row:nth-child(40) td:nth-child(2) .table-innerbox:after {
-  background: #d55c99; }
+  background: #f3ef31; }
 .child-row:nth-child(41) td:nth-child(2) .table-innerbox:after {
-  background: #4c4072; }
+  background: #5d9e34; }
 .child-row:nth-child(42) td:nth-child(2) .table-innerbox:after {
-  background: #aa8c58; }
+  background: #a82b68; }
 .child-row:nth-child(43) td:nth-child(2) .table-innerbox:after {
-  background: #0940a9; }
+  background: #bcba5b; }
 .child-row:nth-child(44) td:nth-child(2) .table-innerbox:after {
-  background: #bc7d45; }
+  background: #df0dee; }
 .child-row:nth-child(45) td:nth-child(2) .table-innerbox:after {
-  background: #08b4aa; }
+  background: #3ddc6f; }
 .child-row:nth-child(46) td:nth-child(2) .table-innerbox:after {
-  background: #9b6918; }
+  background: #202d7d; }
 .child-row:nth-child(47) td:nth-child(2) .table-innerbox:after {
-  background: #124a16; }
+  background: #a77779; }
 .child-row:nth-child(48) td:nth-child(2) .table-innerbox:after {
-  background: #36a3a0; }
+  background: #b3790a; }
 .child-row:nth-child(49) td:nth-child(2) .table-innerbox:after {
-  background: #f1a9ec; }
+  background: #2d3474; }
 .child-row:nth-child(50) td:nth-child(2) .table-innerbox:after {
-  background: #81ec6d; }
+  background: #aaf7a9; }
 .child-row:nth-child(51) td:nth-child(2) .table-innerbox:after {
-  background: #1e1ca7; }
+  background: #466398; }
 .child-row:nth-child(52) td:nth-child(2) .table-innerbox:after {
-  background: #d93a7e; }
+  background: #64931d; }
 .child-row:nth-child(53) td:nth-child(2) .table-innerbox:after {
-  background: #456f52; }
+  background: #25d794; }
 .child-row:nth-child(54) td:nth-child(2) .table-innerbox:after {
-  background: #aed42a; }
+  background: #bec625; }
 .child-row:nth-child(55) td:nth-child(2) .table-innerbox:after {
-  background: #119681; }
+  background: #a7c899; }
 .child-row:nth-child(56) td:nth-child(2) .table-innerbox:after {
-  background: #64a040; }
+  background: #cbb7d1; }
 .child-row:nth-child(57) td:nth-child(2) .table-innerbox:after {
-  background: #8c3dc3; }
+  background: #2d777d; }
 .child-row:nth-child(58) td:nth-child(2) .table-innerbox:after {
-  background: #a99a3d; }
+  background: #9d84cb; }
 .child-row:nth-child(59) td:nth-child(2) .table-innerbox:after {
-  background: #190b9a; }
+  background: #be8c2d; }
 .child-row:nth-child(60) td:nth-child(2) .table-innerbox:after {
-  background: #f75777; }
+  background: #84ef83; }
 .child-row:nth-child(61) td:nth-child(2) .table-innerbox:after {
-  background: #f2201d; }
+  background: #c8b2a1; }
 .child-row:nth-child(62) td:nth-child(2) .table-innerbox:after {
-  background: #35aad5; }
+  background: #41cd7f; }
 .child-row:nth-child(63) td:nth-child(2) .table-innerbox:after {
-  background: #167da3; }
+  background: #049953; }
 .child-row:nth-child(64) td:nth-child(2) .table-innerbox:after {
-  background: #3d281c; }
+  background: #7b60a6; }
 .child-row:nth-child(65) td:nth-child(2) .table-innerbox:after {
-  background: #c8e14a; }
+  background: #9a67b5; }
 .child-row:nth-child(66) td:nth-child(2) .table-innerbox:after {
-  background: #18a4d6; }
+  background: #4854ae; }
 .child-row:nth-child(67) td:nth-child(2) .table-innerbox:after {
-  background: #57b272; }
+  background: #c2c853; }
 .child-row:nth-child(68) td:nth-child(2) .table-innerbox:after {
-  background: #f7bd0e; }
+  background: #99f8d3; }
 .child-row:nth-child(69) td:nth-child(2) .table-innerbox:after {
-  background: #4dcaf8; }
+  background: #011bd0; }
 .child-row:nth-child(70) td:nth-child(2) .table-innerbox:after {
-  background: #c51835; }
+  background: #c1c36d; }
 .child-row:nth-child(71) td:nth-child(2) .table-innerbox:after {
-  background: #9572af; }
+  background: #c7668f; }
 .child-row:nth-child(72) td:nth-child(2) .table-innerbox:after {
-  background: #92b68a; }
+  background: #02d08d; }
 .child-row:nth-child(73) td:nth-child(2) .table-innerbox:after {
-  background: #121d04; }
+  background: #9fe583; }
 .child-row:nth-child(74) td:nth-child(2) .table-innerbox:after {
-  background: #a2cbc7; }
+  background: #08765e; }
 .child-row:nth-child(75) td:nth-child(2) .table-innerbox:after {
-  background: #e68686; }
+  background: #1c2098; }
 .child-row:nth-child(76) td:nth-child(2) .table-innerbox:after {
-  background: #491a27; }
+  background: #2a2c42; }
 .child-row:nth-child(77) td:nth-child(2) .table-innerbox:after {
-  background: #60f59e; }
+  background: #f857f4; }
 .child-row:nth-child(78) td:nth-child(2) .table-innerbox:after {
-  background: #fe3a47; }
+  background: #3bf14f; }
 .child-row:nth-child(79) td:nth-child(2) .table-innerbox:after {
-  background: #7151aa; }
+  background: #580bab; }
 .child-row:nth-child(80) td:nth-child(2) .table-innerbox:after {
-  background: #4c8106; }
+  background: #d22f7c; }
 .child-row:nth-child(81) td:nth-child(2) .table-innerbox:after {
-  background: #19693c; }
+  background: #29ad3a; }
 .child-row:nth-child(82) td:nth-child(2) .table-innerbox:after {
-  background: #3df643; }
+  background: #a23f58; }
 .child-row:nth-child(83) td:nth-child(2) .table-innerbox:after {
-  background: #b5f489; }
+  background: #b7e9f1; }
 .child-row:nth-child(84) td:nth-child(2) .table-innerbox:after {
-  background: #27952e; }
+  background: #3ff65d; }
 .child-row:nth-child(85) td:nth-child(2) .table-innerbox:after {
-  background: #1f43e2; }
+  background: #d5a3f0; }
 .child-row:nth-child(86) td:nth-child(2) .table-innerbox:after {
-  background: #bdb018; }
+  background: #7ca007; }
 .child-row:nth-child(87) td:nth-child(2) .table-innerbox:after {
-  background: #4551e8; }
+  background: #f29538; }
 .child-row:nth-child(88) td:nth-child(2) .table-innerbox:after {
-  background: #65d743; }
+  background: #75ec43; }
 .child-row:nth-child(89) td:nth-child(2) .table-innerbox:after {
-  background: #e87048; }
+  background: #4dbef4; }
 .child-row:nth-child(90) td:nth-child(2) .table-innerbox:after {
-  background: #626104; }
+  background: #184cbb; }
 .child-row:nth-child(91) td:nth-child(2) .table-innerbox:after {
-  background: #c82f2d; }
+  background: #7c69d6; }
 .child-row:nth-child(92) td:nth-child(2) .table-innerbox:after {
-  background: #a9cd0e; }
+  background: #895de7; }
 .child-row:nth-child(93) td:nth-child(2) .table-innerbox:after {
-  background: #dbdcb4; }
+  background: #813c77; }
 .child-row:nth-child(94) td:nth-child(2) .table-innerbox:after {
-  background: #39fc66; }
+  background: #d49f2a; }
 .child-row:nth-child(95) td:nth-child(2) .table-innerbox:after {
-  background: #e782e1; }
+  background: #846f1c; }
 .child-row:nth-child(96) td:nth-child(2) .table-innerbox:after {
-  background: #77ef18; }
+  background: #f85246; }
 .child-row:nth-child(97) td:nth-child(2) .table-innerbox:after {
-  background: #d91c23; }
+  background: #c8318c; }
 .child-row:nth-child(98) td:nth-child(2) .table-innerbox:after {
-  background: #3a4e3f; }
+  background: #05ca89; }
 .child-row:nth-child(99) td:nth-child(2) .table-innerbox:after {
-  background: #b0c779; }
+  background: #0c14fa; }
 
 .child-row td:nth-child(2) .table-innerbox {
   position: relative; }
@@ -16695,19 +16695,22 @@ input:not(:checked) + .slider-switch > .switch-non {
 .sarch-right-bar-border select {
   border: 1px solid #bababa !important; }
 
+.query-wizard-exp-contents .flex-sub-framework-box {
+  justify-content: flex-start !important; }
+
 .flex-sub-framework-box .flex-sub-row-container {
-  margin-left: 32.7%; }
+  margin-left: 44.5%; }
   .flex-sub-framework-box .flex-sub-row-container::after {
     top: -20px !important;
     height: 108px !important; }
 .flex-sub-framework-box .horizontal::after {
   content: "";
   width: 0;
-  height: 36px;
+  height: 35px;
   position: absolute;
   border: 1px solid #776fff;
   top: -18px;
-  left: 425px; }
+  left: 535px; }
 
 .flex-sub-framework-toggle-btn {
   justify-content: inherit;
@@ -16715,14 +16718,44 @@ input:not(:checked) + .slider-switch > .switch-non {
   .flex-sub-framework-toggle-btn::after {
     content: "";
     width: 0;
-    height: 68px;
+    height: 60px;
     position: absolute;
     border: 1px solid #776fff;
     top: -18px;
-    left: 44.8%; }
+    left: 56.4%; }
   .flex-sub-framework-toggle-btn .query-toggle-btn-div {
-    margin-left: 40.7%;
+    margin-left: 52.5%;
     padding: 0px; }
+
+.dropdown-with-img-input .dropdown-with-logos li .dropdwon-connector-img {
+  width: 20px !important;
+  height: 20px; }
+
+.dropdown-with-img-input {
+  width: 180px; }
+  .dropdown-with-img-input .dropdown-with-img-select div + div {
+    font-size: 15px !important; }
+
+.dropdown-with-img li {
+  display: flex !important;
+  justify-content: flex-start;
+  align-items: center;
+  padding: 5px;
+  border: 0px solid #ccc;
+  cursor: pointer; }
+  .dropdown-with-img li input {
+    height: 14px;
+    width: 14px; }
+
+.query-wizard-exp-contents-new .query-wizard-dropdown-large {
+  width: 134px !important; }
+
+.qw-input {
+  width: 64px;
+  padding: 10px 10px;
+  border: 1px solid #bababa;
+  outline: 0px !important;
+  height: 32px; }
 
 @media screen and (max-width: 767px) {
   .assets-details-modal-field-row {
