--- a/scss/_fahad.scss
+++ b/scss/_fahad.scss
@@ -4786,9 +4786,14 @@ height: 300px;
 }
 
 // Query wizard modal new structure
+.query-wizard-exp-contents {
+  .flex-sub-framework-box {
+    justify-content: flex-start !important;
+  }
+}
 .flex-sub-framework-box {
   .flex-sub-row-container {
-   margin-left: 32.7%;
+   margin-left: 44.5%;
    &::after {
     top: -20px !important;
     height: 108px !important;
@@ -4798,11 +4803,11 @@ height: 300px;
     &::after {
       content: "";
     width: 0;
-    height: 36px;
+    height: 35px;
     position: absolute;
     border: 1px solid #776fff;
     top: -18px;
-    left: 425px;
+    left: 535px;
     }
   }
  }
@@ -4812,14 +4817,50 @@ height: 300px;
   &::after {
     content: "";
     width: 0;
-    height: 68px;
+    height: 60px;
     position: absolute;
     border: 1px solid #776fff;
     top: -18px;
-    left: 44.8%;
+    left: 56.4%;
   }
   .query-toggle-btn-div {
-    margin-left: 40.7%;
+    margin-left: 52.5%;
     padding: 0px;
   }
  }
+ .dropdown-with-img-input .dropdown-with-logos li .dropdwon-connector-img {
+  width: 20px !important;
+  height: 20px;
+}
+.dropdown-with-img-input {
+  width: 180px;
+  .dropdown-with-img-select {
+    div + div {
+      font-size: 15px !important;
+    }
+  }
+}
+.dropdown-with-img li {
+  display: flex !important;
+  justify-content: flex-start;
+  align-items: center;
+  padding: 5px;
+  border: 0px solid #ccc;
+  cursor: pointer;
+  input {
+    height: 14px;
+    width: 14px;
+  }
+}
+.query-wizard-exp-contents-new {
+  .query-wizard-dropdown-large {
+    width: 134px !important;
+  }
+}
+.qw-input {
+  width: 64px;
+    padding: 10px 10px;
+    border: 1px solid #bababa;
+    outline: 0px !important;
+    height: 32px;
+}
