--- a/css/bootstrap.css
+++ b/css/bootstrap.css
@@ -8725,205 +8725,205 @@ th {
   visibility: hidden; }
 
 .child-row:nth-child(0) td:nth-child(2) .table-innerbox:after {
-  background: #d680f3; }
+  background: #a1053b; }
 .child-row:nth-child(1) td:nth-child(2) .table-innerbox:after {
-  background: #6168a4; }
+  background: #6287cc; }
 .child-row:nth-child(2) td:nth-child(2) .table-innerbox:after {
-  background: #df61a4; }
+  background: #b0664a; }
 .child-row:nth-child(3) td:nth-child(2) .table-innerbox:after {
-  background: #723106; }
+  background: #b676ca; }
 .child-row:nth-child(4) td:nth-child(2) .table-innerbox:after {
-  background: #ef7eaa; }
+  background: #0dfc41; }
 .child-row:nth-child(5) td:nth-child(2) .table-innerbox:after {
-  background: #c7938b; }
+  background: #ac6e58; }
 .child-row:nth-child(6) td:nth-child(2) .table-innerbox:after {
-  background: #cf1eb9; }
+  background: #d5bd24; }
 .child-row:nth-child(7) td:nth-child(2) .table-innerbox:after {
-  background: #0ae69c; }
+  background: #705c55; }
 .child-row:nth-child(8) td:nth-child(2) .table-innerbox:after {
-  background: #c6dcfa; }
+  background: #9acf35; }
 .child-row:nth-child(9) td:nth-child(2) .table-innerbox:after {
-  background: #a02373; }
+  background: #295103; }
 .child-row:nth-child(10) td:nth-child(2) .table-innerbox:after {
-  background: #b3e351; }
+  background: #431bd1; }
 .child-row:nth-child(11) td:nth-child(2) .table-innerbox:after {
-  background: #2f1b64; }
+  background: #dfd47d; }
 .child-row:nth-child(12) td:nth-child(2) .table-innerbox:after {
-  background: #8935ab; }
+  background: #300e6c; }
 .child-row:nth-child(13) td:nth-child(2) .table-innerbox:after {
-  background: #a2b468; }
+  background: #d6164a; }
 .child-row:nth-child(14) td:nth-child(2) .table-innerbox:after {
-  background: #32d867; }
+  background: #49cf4c; }
 .child-row:nth-child(15) td:nth-child(2) .table-innerbox:after {
-  background: #129202; }
+  background: #be7930; }
 .child-row:nth-child(16) td:nth-child(2) .table-innerbox:after {
-  background: #f49413; }
+  background: #18f3a4; }
 .child-row:nth-child(17) td:nth-child(2) .table-innerbox:after {
-  background: #42d0c1; }
+  background: #5e081f; }
 .child-row:nth-child(18) td:nth-child(2) .table-innerbox:after {
-  background: #258081; }
+  background: #e6b0a6; }
 .child-row:nth-child(19) td:nth-child(2) .table-innerbox:after {
-  background: #791157; }
+  background: #38676d; }
 .child-row:nth-child(20) td:nth-child(2) .table-innerbox:after {
-  background: #707168; }
+  background: #289eef; }
 .child-row:nth-child(21) td:nth-child(2) .table-innerbox:after {
-  background: #6f8b0e; }
+  background: #fe8882; }
 .child-row:nth-child(22) td:nth-child(2) .table-innerbox:after {
-  background: #43ddc5; }
+  background: #b47289; }
 .child-row:nth-child(23) td:nth-child(2) .table-innerbox:after {
-  background: #e5c676; }
+  background: #38c6cc; }
 .child-row:nth-child(24) td:nth-child(2) .table-innerbox:after {
-  background: #f12f65; }
+  background: #b5afd6; }
 .child-row:nth-child(25) td:nth-child(2) .table-innerbox:after {
-  background: #48191c; }
+  background: #49588b; }
 .child-row:nth-child(26) td:nth-child(2) .table-innerbox:after {
-  background: #5167f3; }
+  background: #296435; }
 .child-row:nth-child(27) td:nth-child(2) .table-innerbox:after {
-  background: #368728; }
+  background: #10c436; }
 .child-row:nth-child(28) td:nth-child(2) .table-innerbox:after {
-  background: #9d0513; }
+  background: #46d738; }
 .child-row:nth-child(29) td:nth-child(2) .table-innerbox:after {
-  background: #124e33; }
+  background: #0c185c; }
 .child-row:nth-child(30) td:nth-child(2) .table-innerbox:after {
-  background: #28235a; }
+  background: #d29409; }
 .child-row:nth-child(31) td:nth-child(2) .table-innerbox:after {
-  background: #d46583; }
+  background: #d4dc3f; }
 .child-row:nth-child(32) td:nth-child(2) .table-innerbox:after {
-  background: #828439; }
+  background: #3d122a; }
 .child-row:nth-child(33) td:nth-child(2) .table-innerbox:after {
-  background: #6fef31; }
+  background: #ca7a35; }
 .child-row:nth-child(34) td:nth-child(2) .table-innerbox:after {
-  background: #0c20bc; }
+  background: #53c1df; }
 .child-row:nth-child(35) td:nth-child(2) .table-innerbox:after {
-  background: #1f4dc8; }
+  background: #973099; }
 .child-row:nth-child(36) td:nth-child(2) .table-innerbox:after {
-  background: #0bb8f0; }
+  background: #f38649; }
 .child-row:nth-child(37) td:nth-child(2) .table-innerbox:after {
-  background: #e89fcb; }
+  background: #4f489c; }
 .child-row:nth-child(38) td:nth-child(2) .table-innerbox:after {
-  background: #bed209; }
+  background: #ecdd08; }
 .child-row:nth-child(39) td:nth-child(2) .table-innerbox:after {
-  background: #9bbfa0; }
+  background: #c50c12; }
 .child-row:nth-child(40) td:nth-child(2) .table-innerbox:after {
-  background: #f3ef31; }
+  background: #535e8b; }
 .child-row:nth-child(41) td:nth-child(2) .table-innerbox:after {
-  background: #5d9e34; }
+  background: #d38586; }
 .child-row:nth-child(42) td:nth-child(2) .table-innerbox:after {
-  background: #a82b68; }
+  background: #b5f35a; }
 .child-row:nth-child(43) td:nth-child(2) .table-innerbox:after {
-  background: #bcba5b; }
+  background: #d3b808; }
 .child-row:nth-child(44) td:nth-child(2) .table-innerbox:after {
-  background: #df0dee; }
+  background: #bc5ad4; }
 .child-row:nth-child(45) td:nth-child(2) .table-innerbox:after {
-  background: #3ddc6f; }
+  background: #097d3a; }
 .child-row:nth-child(46) td:nth-child(2) .table-innerbox:after {
-  background: #202d7d; }
+  background: #2771c5; }
 .child-row:nth-child(47) td:nth-child(2) .table-innerbox:after {
-  background: #a77779; }
+  background: #5cd693; }
 .child-row:nth-child(48) td:nth-child(2) .table-innerbox:after {
-  background: #b3790a; }
+  background: #66062c; }
 .child-row:nth-child(49) td:nth-child(2) .table-innerbox:after {
-  background: #2d3474; }
+  background: #62f89f; }
 .child-row:nth-child(50) td:nth-child(2) .table-innerbox:after {
-  background: #aaf7a9; }
+  background: #e1d304; }
 .child-row:nth-child(51) td:nth-child(2) .table-innerbox:after {
-  background: #466398; }
+  background: #24713e; }
 .child-row:nth-child(52) td:nth-child(2) .table-innerbox:after {
-  background: #64931d; }
+  background: #5e988a; }
 .child-row:nth-child(53) td:nth-child(2) .table-innerbox:after {
-  background: #25d794; }
+  background: #878146; }
 .child-row:nth-child(54) td:nth-child(2) .table-innerbox:after {
-  background: #bec625; }
+  background: #cff739; }
 .child-row:nth-child(55) td:nth-child(2) .table-innerbox:after {
-  background: #a7c899; }
+  background: #301cbe; }
 .child-row:nth-child(56) td:nth-child(2) .table-innerbox:after {
-  background: #cbb7d1; }
+  background: #b42d3c; }
 .child-row:nth-child(57) td:nth-child(2) .table-innerbox:after {
-  background: #2d777d; }
+  background: #ecd90c; }
 .child-row:nth-child(58) td:nth-child(2) .table-innerbox:after {
-  background: #9d84cb; }
+  background: #7dbcbc; }
 .child-row:nth-child(59) td:nth-child(2) .table-innerbox:after {
-  background: #be8c2d; }
+  background: #213280; }
 .child-row:nth-child(60) td:nth-child(2) .table-innerbox:after {
-  background: #84ef83; }
+  background: #1d17ea; }
 .child-row:nth-child(61) td:nth-child(2) .table-innerbox:after {
-  background: #c8b2a1; }
+  background: #9396f6; }
 .child-row:nth-child(62) td:nth-child(2) .table-innerbox:after {
-  background: #41cd7f; }
+  background: #59254f; }
 .child-row:nth-child(63) td:nth-child(2) .table-innerbox:after {
-  background: #049953; }
+  background: #fbadcb; }
 .child-row:nth-child(64) td:nth-child(2) .table-innerbox:after {
-  background: #7b60a6; }
+  background: #91b60d; }
 .child-row:nth-child(65) td:nth-child(2) .table-innerbox:after {
-  background: #9a67b5; }
+  background: #21ca9b; }
 .child-row:nth-child(66) td:nth-child(2) .table-innerbox:after {
-  background: #4854ae; }
+  background: #3feb83; }
 .child-row:nth-child(67) td:nth-child(2) .table-innerbox:after {
-  background: #c2c853; }
+  background: #ba2109; }
 .child-row:nth-child(68) td:nth-child(2) .table-innerbox:after {
-  background: #99f8d3; }
+  background: #294ae8; }
 .child-row:nth-child(69) td:nth-child(2) .table-innerbox:after {
-  background: #011bd0; }
+  background: #2f2051; }
 .child-row:nth-child(70) td:nth-child(2) .table-innerbox:after {
-  background: #c1c36d; }
+  background: #bd1580; }
 .child-row:nth-child(71) td:nth-child(2) .table-innerbox:after {
-  background: #c7668f; }
+  background: #661344; }
 .child-row:nth-child(72) td:nth-child(2) .table-innerbox:after {
-  background: #02d08d; }
+  background: #892cf1; }
 .child-row:nth-child(73) td:nth-child(2) .table-innerbox:after {
-  background: #9fe583; }
+  background: #2a07c9; }
 .child-row:nth-child(74) td:nth-child(2) .table-innerbox:after {
-  background: #08765e; }
+  background: #5368ac; }
 .child-row:nth-child(75) td:nth-child(2) .table-innerbox:after {
-  background: #1c2098; }
+  background: #fb040d; }
 .child-row:nth-child(76) td:nth-child(2) .table-innerbox:after {
-  background: #2a2c42; }
+  background: #8ad206; }
 .child-row:nth-child(77) td:nth-child(2) .table-innerbox:after {
-  background: #f857f4; }
+  background: #be3b71; }
 .child-row:nth-child(78) td:nth-child(2) .table-innerbox:after {
-  background: #3bf14f; }
+  background: #048b85; }
 .child-row:nth-child(79) td:nth-child(2) .table-innerbox:after {
-  background: #580bab; }
+  background: #094b6e; }
 .child-row:nth-child(80) td:nth-child(2) .table-innerbox:after {
-  background: #d22f7c; }
+  background: #84c709; }
 .child-row:nth-child(81) td:nth-child(2) .table-innerbox:after {
-  background: #29ad3a; }
+  background: #12dfbd; }
 .child-row:nth-child(82) td:nth-child(2) .table-innerbox:after {
-  background: #a23f58; }
+  background: #e94d31; }
 .child-row:nth-child(83) td:nth-child(2) .table-innerbox:after {
-  background: #b7e9f1; }
+  background: #d94814; }
 .child-row:nth-child(84) td:nth-child(2) .table-innerbox:after {
-  background: #3ff65d; }
+  background: #e22560; }
 .child-row:nth-child(85) td:nth-child(2) .table-innerbox:after {
-  background: #d5a3f0; }
+  background: #665691; }
 .child-row:nth-child(86) td:nth-child(2) .table-innerbox:after {
-  background: #7ca007; }
+  background: #3066a7; }
 .child-row:nth-child(87) td:nth-child(2) .table-innerbox:after {
-  background: #f29538; }
+  background: #40d21e; }
 .child-row:nth-child(88) td:nth-child(2) .table-innerbox:after {
-  background: #75ec43; }
+  background: #680faf; }
 .child-row:nth-child(89) td:nth-child(2) .table-innerbox:after {
-  background: #4dbef4; }
+  background: #cfe39e; }
 .child-row:nth-child(90) td:nth-child(2) .table-innerbox:after {
-  background: #184cbb; }
+  background: #478259; }
 .child-row:nth-child(91) td:nth-child(2) .table-innerbox:after {
-  background: #7c69d6; }
+  background: #df34c0; }
 .child-row:nth-child(92) td:nth-child(2) .table-innerbox:after {
-  background: #895de7; }
+  background: #c13ea6; }
 .child-row:nth-child(93) td:nth-child(2) .table-innerbox:after {
-  background: #813c77; }
+  background: #77707e; }
 .child-row:nth-child(94) td:nth-child(2) .table-innerbox:after {
-  background: #d49f2a; }
+  background: #b97e29; }
 .child-row:nth-child(95) td:nth-child(2) .table-innerbox:after {
-  background: #846f1c; }
+  background: #18e25b; }
 .child-row:nth-child(96) td:nth-child(2) .table-innerbox:after {
-  background: #f85246; }
+  background: #819f9a; }
 .child-row:nth-child(97) td:nth-child(2) .table-innerbox:after {
-  background: #c8318c; }
+  background: #8e5395; }
 .child-row:nth-child(98) td:nth-child(2) .table-innerbox:after {
-  background: #05ca89; }
+  background: #cb3b9b; }
 .child-row:nth-child(99) td:nth-child(2) .table-innerbox:after {
-  background: #0c14fa; }
+  background: #13809b; }
 
 .child-row td:nth-child(2) .table-innerbox {
   position: relative; }
@@ -13943,7 +13943,8 @@ input:checked + .sliders:before {
   .query-wizard-exp-contents .query-wizard-expension .dropdown-with-logos div + div {
     font-size: 12px; }
   .query-wizard-exp-contents .query-wizard-expension .dropdown-with-img-select img {
-    width: 30px !important; }
+    width: 30px !important;
+    padding: 4px 4px 3px; }
 
 .query-wizard-exp-contents .query-wizard-expension {
   display: flex !important;
@@ -16736,6 +16737,13 @@ input:not(:checked) + .slider-switch > .switch-non {
   .dropdown-with-img-input .dropdown-with-img-select div + div {
     font-size: 15px !important; }
 
+.dropdown-with-img-small {
+  width: 134px; }
+  .dropdown-with-img-small .dropdown-with-img-select div + div {
+    font-size: 15px !important; }
+  .dropdown-with-img-small .dropdown-with-img-select .dropdown-logo img {
+    width: 26px !important; }
+
 .dropdown-with-img li {
   display: flex !important;
   justify-content: flex-start;
@@ -16756,6 +16764,17 @@ input:not(:checked) + .slider-switch > .switch-non {
   border: 1px solid #bababa;
   outline: 0px !important;
   height: 32px; }
+
+.dropdown-border-div {
+  border: 1px solid #cccccc; }
+
+.dropdown-scroll-div {
+  height: 200px;
+  overflow: hidden;
+  margin: 0px; }
+
+.dropdown-with-img-input .dropdown-with-logos:hover {
+  border: 1px solid #cccccc; }
 
 @media screen and (max-width: 767px) {
   .assets-details-modal-field-row {
